--- a/public/css/pages/searchOptions.css
+++ b/public/css/pages/searchOptions.css
@@ -34,7 +34,7 @@
     position: absolute;
     top: 100%;
     left: 0;
-    z-index: 1000;
+    z-index: 200 !important;
     display: none;
     float: left;
     min-width: 160px;
@@ -64,6 +64,7 @@
 
 .tt-dataset .tt-suggestion:hover,
 .tt-cursor {
+    z-index: 100;
     background-color: #F2F6F8;
 }
 
